<resources>
    <string name="app_name">Cambridge LED Lab</string>
    <string name="reduced_app_name">LED Lab</string>
    <string name="by">"by : "</string>
    <string name="creator">"Cambridge Centre for Gallium Nitride"</string>
    <string name="ClassroomTitle">Classroom</string>
    <string name="GamesTitle">Games</string>
    <string name="SearchTitle">Search</string>
    <string name="LaboratoryTitle">Laboratory</string>
    <string name="ContactUsTitle">Contact Us</string>
    <string name="ClassroomDescription">
        "Learn all about LEDs, how they're made and why they're so great with these short classes that can be finished in minutes. \n\nBefore you start, you should probably know:"
    </string>
    <string name="dash">"- "</string>
    <string name="ClassroomContentsExplanation1">"For each topic there are three classes that get progressively more difficult."</string>
    <string name="ClassroomContentsExplanation2">"Each class builds on knowledge from previous classes in each topic."</string>
    <string name="ClassroomContentsExplanation3">"Some topics rely on knowledge from other topics; check by holding over a topic."</string>
    <string name="PopupDescription">" Before starting this topic, you \n should probably know:"</string>
    <string name="NoExpectationsDescription">" No previous knowledge is \n expected. You can try this \n one now!"</string>
    <string name="ClassText_InsideLed1_Page1">
        An LED bulb may look simple from the outside but a lot of complex science is needed to create one. This class looks at what you see when you take an LED bulb apart.
    </string>
    <string name="ClassText_InsideLed1_Page2">
        You may notice that LED bulbs look a lot like ordinary bulbs. This is due to the design of the outer light diffuser, which helps the light spread out. Once
        the light diffuser is removed you\'re left with what looks like a yellow ping pong ball. This is a cap containing yellow phosphor.
    </string>
    <string name="ClassText_InsideLed1_Page3">
        The yellow phosphor is essential for producing white light because the LED chips underneath only produce blue light. The yellow phosphor absorbs some of this
        blue light and emits many different colours of light. Our eyes view this combination of colours as white light.
    </string>
    <string name="ClassText_InsideLed1_Page4">
        If the yellow phosphor is now removed, you can see many individual LED chips which are responsible for producing the light. Each one is very small but produces
        more than 100 lumens of light. They are highly efficient but a little heat is still produced, which can badly reduce efficiency, so a metal heat sink is used to
        absorb heat away from the LED.
    </string>
    <string name="ClassText_InsideLed1_Page5">
        "By looking at these real images, you can get a better sense of what these components really look like."
    </string>
    <string name="ClassText_InsideLed2_Page1">
        An LED chip produces the light in an LED bulb. This class looks at the structure of one to discover a little about how they work.
    </string>
    <string name="ClassText_InsideLed2_Page2">
        After the polymer dome on top of the chip is removed, we find the chip has an array of electrodes. Some of these are n-electrodes which
        provide an input of negative charge carriers to the LED and some are p-electrodes which provide an input of positive charge carriers.
    </string>
    <string name="ClassText_InsideLed2_Page3">
        If we cut the chip and look at the cross-section, we see layers of the semiconductor material from which the LED is made. In many LED bulbs this will be
        p-GaN (doped gallium nitride with excess positive charge carriers) and n-GaN (doped gallium nitride with excess of negative charge carriers). Where these
        layers meet the negative and positive charge carriers can combine and release light.
    </string>
    <string name="ClassText_InsideLed2_Page4">
        "When we look at an actual photo of this, we see that it looks a little more complicated but the layers of p-GaN and n-GaN are still visible. Between them,"
        "a thin, dark line is just about visible, which is the active region, where negative and positive charge carriers combine."
    </string>
    <string name="ClassText_InsideLed2_Page5">
        "In LEDs, the negative charge carriers are electrons, but the positive charge carriers aren't particles; they are the absence of an electron, known as a hole. Holes can be"
        "difficult to visualise, but for most situations you can imagine them to be like a particle with opposite charge to an electron."
    </string>
    <string name="ClassText_InsideLed3_Page1">
        "We've briefly looked at how LEDs produce light, but in this class we'll look even closer at a p-n junction to discover how quantum wells are used to help electrons and"
        "holes combine."
    </string>
    <string name="ClassText_InsideLed3_Page2">
        "Free electrons and holes in a material will have different energies, and the difference is related to something called the band gap. A quantum well is"
        "made when a material with smaller band gap is sandwiched between materials with larger band gaps. Since the electrons and holes are also more stable in the lower band gap"
        "material, they are trapped in the quantum well."
    </string>
    <string name="ClassText_InsideLed3_Page3">
        "When we look on the nanoscale at a p-n junction in an LED we see a few extremely thin layers. At the center of these are the thinnest, stripy-looking layers, which are"
        "alternating layers of gallium nitride and indium gallium nitride. These layers are just a few nanometers thick and form a region of multiple quantum wells."
    </string>
    <string name="ClassText_InsideLed3_Page4">
        "The indium gallium nitride has lower band gap than the gallium nitride, so electrons and holes get trapped there making it more likely that they will combine and"
        "release light. This vastly increases the efficiency of LEDs and actually makes LED light bulbs practical."
    </string>
    <string name="ClassText_InsideLed3_Page5">
        "When the electron and the hole combine, the energy difference between them is equal to the energy of the photon that is released. This means by finding"
        "a way to change the band gap of a material, we can change the colour of the light that is produced by the LED. This idea is explored in 'colour tuning'."
    </string>
    <string name="ClassText_LedApplications1_Page1">
        "For most people, LED lights are an unseen part of day-to-day life; whether its a torch or a streetlight, LEDs are used for most modern lighting needs. In this class we'll"
        "look at how LEDs are used for lighting in a variety of circumstances and why they are the preferred choice."
    </string>
    <string name="ClassText_LedApplications1_Page2">
        "Nowadays almost any traditional light bulb can be replaced with an LED equivalent. There is very little price difference whilst LEDs have the benefit of having a long life"
        "(so you replace them less often) and being more efficient (so you save money on electricity). Many people also prefer the brighter appearance of LEDs and the fact that they "
        "respond almost instantaneously to being switched on and off."
    </string>
    <string name="ClassText_LedApplications1_Page3">
        "Most streetlights in the UK are now LEDs, mainly because electricity costs can be reduced by up to 85% which is thousands of pounds each year for most councils, and LEDs need to be"
        "replaced much less often so further savings are made."
    </string>
    <string name="ClassText_LedApplications1_Page4">
        "An increasing number of car headlights are made with LED bulbs, and while bulb efficiency and lifetime are beneficial for the car owner, the reason many manufacturers are"
        "switching to LEDs is that the bulbs and the reflectors in the headlights can be smaller. This means manufacturers have more flexibility with the design."
    </string>
    <string name="ClassText_LedApplications1_Page5">
        "New christmas tree lights usually use LED technology because they can be made brighter and require minimal electronics where old tree lights would require a large box of"
        "controls. For users, the most important advantage of LED tree lights is that they produce much less heat so the risk of a fire is greatly reduced."
    </string>
    <string name="ClassText_LedApplications1_Page6">
        "Another place where less heat is a major advantage is in theaters and on other stages. Traditional stage lights get very hot, whereas LED stage lights do not, making LEDs"
        "better for the actors, and stage crew that have to move them around. LED stage lights also allow for a full spectrum of colours without the use of filters."
    </string>
    <string name="ClassText_LedApplications2_Page1">
        "Apart from lighting, LEDs are incredibly important for visual signals/indications to humans and digital systems. Many of these applications are more revolutionary than"
        "LEDs have been in lighting because there was no equivalent before LEDs, and only LEDs have made them possible."
    </string>
    <string name="ClassText_LedApplications2_Page2">
        "One such new application, is in long-range high frequency digital data communication. The most well-known example is in optical fibre technology where lasers and LEDs play"
        "a vital role, but Li-Fi (similar to Wi-Fi but with visible light) and remote controls used LEDs too. In the case of remote controls, infrared LEDs (with wavelength 940nm) are used to"
        "transfer a digital signal thats invisible to the eye."
    </string>
    <string name="ClassText_LedApplications2_Page3">
        "Many modern traffic lights use LED bulbs because they are brighter and more efficient which makes them cheaper to run and more easy to see on sunny days. In some countries where"
        "it regularly snows, traffic lights are purposely not changed to LEDs because the heat produced by traditional bulbs helps melt the snow around the traffic light and make them"
        "more easy to see."
    </string>
    <string name="TemperatureDependenceFrontPage"> Temperature Dependence of Semiconductors</string>
    <string name="TemperatureDependenceFrontPageDescription"> Click on different types of semiconductors to see how temperature affects the number of charge carriers available in each of them.</string>
    <string name="IntrinsicButton">Intrinsic (Undoped)</string>
    <string name="nTypeButton">Extrinsic (n-type)</string>
    <string name="pTypeButton">Extrinsic (p-type)</string>
    <string name="ContactUsTelephoneHeader">Telephone: Ms Ana Talaban-Bailey</string>
    <string name="ContactUsTelephoneInfo">01223 334457 (+44 1223 334457 for international)</string>
    <string name="ContactUsAddressHeader">Postal Address:</string>
    <string name="ContactUsAddressInfo">
        " Department of Materials Science and Metallurgy, \n"
        "University of Cambridge, \n"
        "27 Charles Babbage Road, \n"
        "Cambridge CB3 0FS, \n"
        "United Kingdom"
    </string>
    <string name="ContactUsWebsitesHeader">Websites:</string>
    <string name="ContactUsGanWebsiteInfo"><u>Cambridge Centre for Gallium Nitride</u></string>
    <string name="ContactUsMsmWebsiteInfo"><u>Cambridge Department of Materials Science and Metallurgy</u></string>
    <string name="ContactUsSocialHeader">Social:</string>
    <string name="ContactUsEmailHeader">E-mail:</string>
    <string name="ContactUsEmailInfo">If you want to inquire about our outreach programme in schools, email us at gan-schools@msm.cam.ac.uk</string>
    <string name="Credits">App made by: James Moloney and Anna Bui</string>
</resources>