<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background_contactus"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cambridge.materials.galliumnitride.app.ledlab.LaboratoryPage">

    <LinearLayout
        android:id="@+id/TitleBanner"
        android:orientation="horizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <cambridge.materials.galliumnitride.app.ledlab.SquareFromWidthImageButton
            android:id="@+id/backButton"
            android:background="@drawable/ic_button_back"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <include
            layout="@layout/title_bar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:layout_marginTop="10dp"
            app:layout_constraintLeft_toRightOf="@+id/backButton"
            app:layout_constraintRight_toLeftOf="@+id/homeButton"
            app:layout_constraintTop_toTopOf="parent" />

        <cambridge.materials.galliumnitride.app.ledlab.SquareFromWidthImageButton
            android:id="@+id/homeButton"
            android:background="@drawable/ic_button_home"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>

    <TextView
        android:id="@+id/ContactUsTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="11dp"
        android:layout_marginRight="11dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="11dp"
        android:layout_marginStart="11dp"
        android:text="@string/ContactUsTitle"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TitleBanner"/>

    <TextView
        android:id="@+id/TelephoneHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="31dp"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="11dp"
        android:text="@string/ContactUsTelephoneHeader"
        android:textSize="12sp"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ContactUsTitle"/>

    <TextView
        android:id="@+id/TelephoneInfo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="51dp"
        android:layout_marginRight="20dp"
        android:layout_below="@+id/TelephoneHeader"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="51dp"
        android:text="@string/ContactUsTelephoneInfo"
        android:textSize="12sp"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TelephoneHeader" />

    <TextView
        android:id="@+id/AddressHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="31dp"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="31dp"
        android:text="@string/ContactUsAddressHeader"
        android:textSize="12sp"
        android:layout_marginTop="11dp"

        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TelephoneInfo"/>

    <TextView
        android:id="@+id/AddressInfo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="51dp"
        android:layout_marginRight="20dp"
        android:layout_below="@+id/AddressHeader"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="51dp"
        android:text="@string/ContactUsAddressInfo"
        android:textSize="12sp"
        android:textColor="@color/white"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AddressHeader"/>

    <TextView
        android:id="@+id/WebsitesHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="31dp"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="31dp"
        android:text="@string/ContactUsWebsitesHeader"
        android:textSize="12sp"
        android:layout_marginTop="11dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AddressInfo"/>

    <TextView
        android:id="@+id/GanWebsiteInfo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="51dp"
        android:layout_marginRight="20dp"
        android:layout_below="@+id/WebsitesHeader"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="51dp"
        android:text="@string/ContactUsGanWebsiteInfo"
        android:textSize="12sp"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/WebsitesHeader"/>

    <TextView
        android:id="@+id/MsmWebsiteInfo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="51dp"
        android:layout_marginRight="20dp"
        android:layout_below="@+id/GanWebsiteInfo"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="51dp"
        android:text="@string/ContactUsMsmWebsiteInfo"
        android:textSize="12sp"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/GanWebsiteInfo"/>

    <TextView
        android:id="@+id/EmailHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="31dp"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="11dp"
        android:text="@string/ContactUsEmailHeader"
        android:textSize="12sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MsmWebsiteInfo"/>

    <TextView
        android:id="@+id/EmailInfo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="51dp"
        android:layout_marginRight="20dp"
        android:layout_below="@+id/EmailHeader"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="51dp"
        android:text="@string/ContactUsEmailInfo"
        android:textSize="12sp"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EmailHeader"/>

    <TextView
        android:id="@+id/SocialHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="31dp"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="31dp"
        android:text="@string/ContactUsSocialHeader"
        android:textSize="12sp"
        android:layout_marginTop="11dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EmailInfo"
        app:layout_constraintVertical_weight="1"/>

    <cambridge.materials.galliumnitride.app.ledlab.SquareFromHeightImageButton
        android:id="@+id/YoutubeButton"
        android:background="@drawable/button_youtube_selector"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_weight="1"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        app:layout_constraintBottom_toTopOf="@+id/Credits"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/PinterestButton"
        app:layout_constraintTop_toBottomOf="@+id/SocialHeader"/>

    <cambridge.materials.galliumnitride.app.ledlab.SquareFromHeightImageButton
        android:id="@+id/PinterestButton"
        android:background="@drawable/button_pinterest_selector"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_weight="1"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        app:layout_constraintBottom_toTopOf="@+id/Credits"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toRightOf="@+id/YoutubeButton"
        app:layout_constraintRight_toLeftOf="@+id/LinkedInButton"
        app:layout_constraintTop_toBottomOf="@+id/SocialHeader"/>

    <cambridge.materials.galliumnitride.app.ledlab.SquareFromHeightImageButton
        android:id="@+id/LinkedInButton"
        android:background="@drawable/button_linked_in_selector"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_weight="1"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        app:layout_constraintBottom_toTopOf="@+id/Credits"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toRightOf="@+id/PinterestButton"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SocialHeader"/>

    <TextView
        android:id="@+id/Credits"
        android:gravity="center"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/Credits"
        android:textSize="10sp"
        android:layout_marginTop="5dp"
        android:textColor="@color/white"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
</android.support.constraint.ConstraintLayout>