<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_laboratory">

    <LinearLayout
        android:id="@+id/TitleBanner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1">

        <cambridge.materials.galliumnitride.app.ledlab.SquareFromWidthImageButton
            android:id="@+id/backButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/ic_button_back"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <include
            layout="@layout/title_bar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="5"
            app:layout_constraintLeft_toRightOf="@+id/backButton"
            app:layout_constraintRight_toLeftOf="@+id/homeButton"
            app:layout_constraintTop_toTopOf="parent" />

        <cambridge.materials.galliumnitride.app.ledlab.SquareFromWidthImageButton
            android:id="@+id/homeButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/ic_button_home"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>

    <TextView
        android:id="@+id/TemperatureDependenceFrontpageTitle"

        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"

        android:text="@string/TemperatureDependenceFrontPage"
        android:textColor="@color/indigo"
        android:textSize="28sp"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TitleBanner" />

    <TextView
        android:id="@+id/TemperatureDependenceFrontpageDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:text="@string/TemperatureDependenceFrontPageDescription"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TemperatureDependenceFrontpageTitle" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="80dp"
        android:layout_marginRight="80dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TemperatureDependenceFrontpageDescription"
        app:layout_constraintVertical_bias="0.39">

        <cambridge.materials.galliumnitride.app.ledlab.SquareFromWidthImageButton
            android:id="@+id/IntrinsicSemiconductorButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:background="@drawable/ic_experiment_temperature_dependence_frontpage_intrinsic" />

        <TextView
            android:id="@+id/IntrinsicSemiconductorButtonText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_weight="0.2"
            android:gravity="center"
            android:text="@string/IntrinsicButton"
            android:textColor="#8b0000"
            android:textSize="13sp" />

        <cambridge.materials.galliumnitride.app.ledlab.SquareFromWidthImageButton
            android:id="@+id/NTypeSemiconductorButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/ic_experiment_temperature_dependence_frontpage_ntype" />

        <TextView
            android:id="@+id/NTypeSemiconductorButtonText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_weight="0.2"
            android:gravity="center"
            android:text="@string/nTypeButton"
            android:textColor="#8b0000"
            android:textSize="13sp" />

        <cambridge.materials.galliumnitride.app.ledlab.SquareFromWidthImageButton
            android:id="@+id/PTypeSemiconductorButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/ic_experiment_temperature_dependence_frontpage_ptype" />

        <TextView
            android:id="@+id/PTypeSemiconductorButtonText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:gravity="center"
            android:text="@string/pTypeButton"
            android:textColor="#8b0000"
            android:textSize="13sp" />

    </LinearLayout>


</android.support.constraint.ConstraintLayout>